; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_signal.c_do_send_sig_info.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_signal.c_do_send_sig_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kernel_siginfo = type { i32 }
%struct.task_struct = type { i32 }

@ESRCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_send_sig_info(i32 %0, %struct.kernel_siginfo* %1, %struct.task_struct* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.kernel_siginfo*, align 8
  %7 = alloca %struct.task_struct*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.kernel_siginfo* %1, %struct.kernel_siginfo** %6, align 8
  store %struct.task_struct* %2, %struct.task_struct** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @ESRCH, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %10, align 4
  %13 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %14 = call i64 @lock_task_sighand(%struct.task_struct* %13, i64* %9)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %4
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.kernel_siginfo*, %struct.kernel_siginfo** %6, align 8
  %19 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @send_signal(i32 %17, %struct.kernel_siginfo* %18, %struct.task_struct* %19, i32 %20)
  store i32 %21, i32* %10, align 4
  %22 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %23 = call i32 @unlock_task_sighand(%struct.task_struct* %22, i64* %9)
  br label %24

24:                                               ; preds = %16, %4
  %25 = load i32, i32* %10, align 4
  ret i32 %25
}

declare dso_local i64 @lock_task_sighand(%struct.task_struct*, i64*) #1

declare dso_local i32 @send_signal(i32, %struct.kernel_siginfo*, %struct.task_struct*, i32) #1

declare dso_local i32 @unlock_task_sighand(%struct.task_struct*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
